# CFG_Testing

Project/: documentation.txt  readme.txt
Project/src/client/: a.out  client.c  client.h
Project/src/server/: a.out  database.c  database.c.012t.cfg  database.c.012t.cfg.dot  database.h  db.out  init.c  init.out  server.c
Project/src/server/database/: user.ndx
Project/testing/database/: testcases.txt
Project/testing/database/code/: CMakeCache.txt  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  check_password_testcase1.c  check_password_testcase2.c  check_password_testcase3.c  check_password_testcase4.c  check_password_testcase5.c  cmake_install.cmake  database.c  database.c.012t.cfg  database.c.012t.cfg.dot  database.h  database.h.gch  delete_user_testcase1.c  delete_user_testcase2.c  delete_user_testcase3.c  get_account_index_testcase1.c  get_account_index_testcase2.c  get_account_index_testcase3.c  init.out  insert_account_testcase1.c  insert_account_testcase2.c  insert_account_testcase3.c  lock_account_testcase1.c  lock_account_testcase2.c  lock_account_testcase3.c  lock_account_testcase4.c  server.out  test  test.c  transaction_testcase1.c  transaction_testcase2.c  transaction_testcase3.c
Project/testing/database/code/Testing/Temporary/: CTestCostData.txt
Project/testing/server_client/: testcases.txt
Project/testing/server_client/intermediate_files/: client.c.012t.cfg  client.c.012t.cfg.dot  server.c.012t.cfg  server.c.012t.cfg.dot
